--- a/style.css
+++ b/style.css
@@ -1,11 +1,27 @@
-.iframe-container {
-    width: 100%;
-    aspect-ratio: 16/9; /* Adjust this value to your desired aspect ratio */
-    overflow: hidden;
-  }
-  
-  .iframe-container iframe {
-    width: 100%;
-    height: 100%;
-  }
-  
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+* {
+  margin: 0px;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  color: #fff;
+}
+
+header {
+  padding: 4rem;
+}
+
+iframe {
+  aspect-ratio: 1/1;
+  width: min(60vh, 60vw);
+  border-radius: 35px;
+  border: 2px solid #fff;
+}
